--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,17 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 *{
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
+    margin: 0;
+
+padding: 0;
+
+
+
+}
+body {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  line-height: 1.6;
+  background-size: cover;
+  background-color: rgb(58, 226, 43);
+
 }
